scrypted/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: scrypted
spec:
  replicas: 1
  selector:
    matchLabels:
      name: scrypted
  template:
    metadata:
      labels:
        name: scrypted
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet

      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: scrypted
      dnsConfig:
        searches:
          - svc.cluster.local
          - scrypted.svc.cluster.local
          - svc.cluster.local
          - cluster.local
        options:
          - name: edns0
          - name: ndots
            value: "1"
      containers:
        - image: ghcr.io/koush/scrypted:18-jammy-thin.s6-v0.39.6
          name: scrypted
          resources:
            limits:
              memory: 4096Mi
              cpu: '20'
            requests:
              memory: 512Mi
              cpu: '0.8'
          ports:
            - name: http
              containerPort: 18080
          # envFrom:
          #   - secretRef:
          #       name: secrets
          volumeMounts:
            - name: pvc
              mountPath: /server/volume
      restartPolicy: Always
