scrypted/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: scrypted
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    name: scrypted
