scrypted/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrypted
  annotations:
    external-dns.alpha.kubernetes.io/hostname: scrypted.p.cns.me

    # nginx.ingress.kubernetes.io/auth-tls-secret: ca/pair
    # nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "X-Forwarded-For $http_x_forwarded_for";

spec:
  # ingressClassName: nginx
  tls:
  - hosts:
      - scrypted.p.cns.me
    secretName: scrypted-https
  rules:
    - host: scrypted.p.cns.me
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: scrypted
              port: 
                name: http
